finished overall design, completed index.html

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 <div class="col-lg-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="value-icon mb-3">
-                            <i class="fas fa-bullseye fa-3x text-primary"></i>
+                            <i class="fas fa-bullseye fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Our Mission</h5>
                         <p class="text-white-75">To inspire and equip outdoor enthusiasts with premium gear that enhances their adventures while fostering a deeper connection with nature.</p>
@@ -88,7 +88,7 @@
                 <div class="col-lg-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="value-icon mb-3">
-                            <i class="fas fa-award fa-3x text-primary"></i>
+                            <i class="fas fa-award fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Quality First</h5>
                         <p class="text-white-75">We carefully curate every product in our inventory, ensuring that each item meets our rigorous standards for durability and performance.</p>
@@ -97,7 +97,7 @@
                 <div class="col-lg-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="value-icon mb-3">
-                            <i class="fas fa-users fa-3x text-primary"></i>
+                            <i class="fas fa-users fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Community</h5>
                         <p class="text-white-75">We believe in building a community of outdoor enthusiasts who share knowledge, experiences, and a passion for adventure.</p>
@@ -120,7 +120,7 @@
                         <img src="/placeholder.svg?height=150&width=150" 
                              class="rounded-circle mb-3" alt="Mark Thompson" width="150" height="150">
                         <h5 class="text-white mb-2">Mark Thompson</h5>
-                        <p class="text-primary mb-2">Founder & CEO</p>
+                        <p class="text-forest mb-2">Founder & CEO</p>
                         <p class="text-white-75 small">30+ years of outdoor experience. Passionate about mountaineering and backcountry skiing.</p>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                         <img src="/placeholder.svg?height=150&width=150" 
                              class="rounded-circle mb-3" alt="Sarah Thompson" width="150" height="150">
                         <h5 class="text-white mb-2">Sarah Thompson</h5>
-                        <p class="text-primary mb-2">Co-Founder & COO</p>
+                        <p class="text-forest mb-2">Co-Founder & COO</p>
                         <p class="text-white-75 small">Expert in outdoor gear testing and customer experience. Loves long-distance hiking.</p>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <img src="/placeholder.svg?height=150&width=150" 
                              class="rounded-circle mb-3" alt="Jake Wilson" width="150" height="150">
                         <h5 class="text-white mb-2">Jake Wilson</h5>
-                        <p class="text-primary mb-2">Product Manager</p>
+                        <p class="text-forest mb-2">Product Manager</p>
                         <p class="text-white-75 small">Former wilderness guide with expertise in technical climbing and camping equipment.</p>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                         <img src="/placeholder.svg?height=150&width=150" 
                              class="rounded-circle mb-3" alt="Emma Davis" width="150" height="150">
                         <h5 class="text-white mb-2">Emma Davis</h5>
-                        <p class="text-primary mb-2">Customer Experience Lead</p>
+                        <p class="text-forest mb-2">Customer Experience Lead</p>
                         <p class="text-white-75 small">Outdoor educator and gear specialist. Passionate about helping customers find the perfect equipment.</p>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                             <div class="glass-card p-4">
                                 <div class="d-flex align-items-center mb-3">
                                     <div class="timeline-year">
-                                        <span class="h5 text-primary fw-bold">1995</span>
+                                        <span class="h5 text-forest fw-bold">1995</span>
                                     </div>
                                     <h5 class="text-white mb-0 ms-3">The Beginning</h5>
                                 </div>
@@ -180,7 +180,7 @@
                             <div class="glass-card p-4">
                                 <div class="d-flex align-items-center mb-3">
                                     <div class="timeline-year">
-                                        <span class="h5 text-primary fw-bold">2001</span>
+                                        <span class="h5 text-forest fw-bold">2001</span>
                                     </div>
                                     <h5 class="text-white mb-0 ms-3">Expansion</h5>
                                 </div>
@@ -191,7 +191,7 @@
                             <div class="glass-card p-4">
                                 <div class="d-flex align-items-center mb-3">
                                     <div class="timeline-year">
-                                        <span class="h5 text-primary fw-bold">2008</span>
+                                        <span class="h5 text-forest fw-bold">2008</span>
                                     </div>
                                     <h5 class="text-white mb-0 ms-3">Recognition</h5>
                                 </div>
@@ -202,7 +202,7 @@
                             <div class="glass-card p-4">
                                 <div class="d-flex align-items-center mb-3">
                                     <div class="timeline-year">
-                                        <span class="h5 text-primary fw-bold">2015</span>
+                                        <span class="h5 text-forest fw-bold">2015</span>
                                     </div>
                                     <h5 class="text-white mb-0 ms-3">Innovation</h5>
                                 </div>
@@ -213,7 +213,7 @@
                             <div class="glass-card p-4">
                                 <div class="d-flex align-items-center mb-3">
                                     <div class="timeline-year">
-                                        <span class="h5 text-primary fw-bold">2024</span>
+                                        <span class="h5 text-forest fw-bold">2024</span>
                                     </div>
                                     <h5 class="text-white mb-0 ms-3">Digital Future</h5>
                                 </div>
@@ -235,48 +235,48 @@
             </div>
             <div class="glass-panel p-5">
                 <div class="table-responsive">
-                    <table class="table table-borderless text-white">
+                    <table class="table table-borderless text-forest table-transparent">
                         <thead>
                             <tr class="border-bottom border-white-25">
-                                <th class="text-white">Features</th>
-                                <th class="text-center text-primary">CPS</th>
-                                <th class="text-center text-white-75">Competitor A</th>
-                                <th class="text-center text-white-75">Competitor B</th>
+                                <th class="text-forest">Features</th>
+                                <th class="text-center text-forest">CPS</th>
+                                <th class="text-center text-forest">Competitor A</th>
+                                <th class="text-center text-forest">Competitor B</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr class="border-bottom border-white-25">
-                                <td class="text-white-75">Expert Product Testing</td>
+                                <td class="text-forest">Expert Product Testing</td>
                                 <td class="text-center"><i class="fas fa-check text-success fa-lg"></i></td>
                                 <td class="text-center"><i class="fas fa-times text-danger"></i></td>
                                 <td class="text-center"><i class="fas fa-times text-danger"></i></td>
                             </tr>
                             <tr class="border-bottom border-white-25">
-                                <td class="text-white-75">Personal Customer Service</td>
+                                <td class="text-forest">Personal Customer Service</td>
                                 <td class="text-center"><i class="fas fa-check text-success fa-lg"></i></td>
                                 <td class="text-center"><i class="fas fa-check text-success"></i></td>
                                 <td class="text-center"><i class="fas fa-times text-danger"></i></td>
                             </tr>
                             <tr class="border-bottom border-white-25">
-                                <td class="text-white-75">Lifetime Warranty Support</td>
+                                <td class="text-forest">Lifetime Warranty Support</td>
                                 <td class="text-center"><i class="fas fa-check text-success fa-lg"></i></td>
                                 <td class="text-center"><i class="fas fa-times text-danger"></i></td>
                                 <td class="text-center"><i class="fas fa-check text-success"></i></td>
                             </tr>
                             <tr class="border-bottom border-white-25">
-                                <td class="text-white-75">Local Community Events</td>
+                                <td class="text-forest">Local Community Events</td>
                                 <td class="text-center"><i class="fas fa-check text-success fa-lg"></i></td>
                                 <td class="text-center"><i class="fas fa-times text-danger"></i></td>
                                 <td class="text-center"><i class="fas fa-times text-danger"></i></td>
                             </tr>
                             <tr class="border-bottom border-white-25">
-                                <td class="text-white-75">Price Matching</td>
+                                <td class="text-forest">Price Matching</td>
                                 <td class="text-center"><i class="fas fa-check text-success fa-lg"></i></td>
                                 <td class="text-center"><i class="fas fa-check text-success"></i></td>
                                 <td class="text-center"><i class="fas fa-check text-success"></i></td>
                             </tr>
                             <tr>
-                                <td class="text-white-75">Free Gear Consultations</td>
+                                <td class="text-forest">Free Gear Consultations</td>
                                 <td class="text-center"><i class="fas fa-check text-success fa-lg"></i></td>
                                 <td class="text-center"><i class="fas fa-times text-danger"></i></td>
                                 <td class="text-center"><i class="fas fa-times text-danger"></i></td>
@@ -297,28 +297,28 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card text-center p-4">
-                        <i class="fas fa-trophy fa-3x text-warning mb-3"></i>
+                        <i class="fas fa-trophy fa-3x text-forest mb-3"></i>
                         <h6 class="text-white mb-2">Best Outdoor Retailer</h6>
                         <p class="text-white-75 small">Colorado Outdoor Magazine<br>2008, 2009, 2010</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card text-center p-4">
-                        <i class="fas fa-medal fa-3x text-warning mb-3"></i>
+                        <i class="fas fa-medal fa-3x text-forest mb-3"></i>
                         <h6 class="text-white mb-2">Customer Service Excellence</h6>
                         <p class="text-white-75 small">Better Business Bureau<br>A+ Rating Since 2005</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card text-center p-4">
-                        <i class="fas fa-star fa-3x text-warning mb-3"></i>
+                        <i class="fas fa-star fa-3x text-forest mb-3"></i>
                         <h6 class="text-white mb-2">Top Rated Retailer</h6>
                         <p class="text-white-75 small">Outdoor Gear Lab<br>4.9/5 Stars</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card text-center p-4">
-                        <i class="fas fa-handshake fa-3x text-warning mb-3"></i>
+                        <i class="fas fa-handshake fa-3x text-forest mb-3"></i>
                         <h6 class="text-white mb-2">Community Partner</h6>
                         <p class="text-white-75 small">Colorado Parks & Wildlife<br>Conservation Partner</p>
                     </div>
@@ -372,7 +372,7 @@
             </div>
             <hr class="my-4 border-white-25">
             <div class="text-center">
-                <p class="text-white-75 mb-0">&copy; 2024 Camping Products Sales. All rights reserved.</p>
+                <p class="text-white-75 mb-0">&copy; 2025 Camping Products Sales. All rights reserved.</p>
             </div>
         </div>
     </footer>
