--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <div class="col-lg-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="contact-icon mb-3">
-                            <i class="fas fa-map-marker-alt fa-3x text-primary"></i>
+                            <i class="fas fa-map-marker-alt fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Visit Our Stores</h5>
                         <div class="text-white-75">
@@ -68,14 +68,14 @@
                 <div class="col-lg-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="contact-icon mb-3">
-                            <i class="fas fa-phone fa-3x text-primary"></i>
+                            <i class="fas fa-phone fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Call Us</h5>
                         <div class="text-white-75">
                             <p class="mb-2"><strong>Main Line</strong><br>
-                            <a href="tel:+1-555-CAMPING" class="text-primary">(555) CAMPING</a></p>
+                            <a href="tel:+1-555-CAMPING" class="text-forest">(555) CAMPING</a></p>
                             <p class="mb-2"><strong>Customer Service</strong><br>
-                            <a href="tel:+1-555-HELP-CPS" class="text-primary">(555) HELP-CPS</a></p>
+                            <a href="tel:+1-555-HELP-CPS" class="text-forest">(555) HELP-CPS</a></p>
                             <p class="mb-0"><strong>Hours</strong><br>
                             Mon-Sat: 9AM-8PM<br>
                             Sun: 10AM-6PM</p>
@@ -85,16 +85,16 @@
                 <div class="col-lg-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="contact-icon mb-3">
-                            <i class="fas fa-envelope fa-3x text-primary"></i>
+                            <i class="fas fa-envelope fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Email Us</h5>
                         <div class="text-white-75">
                             <p class="mb-2"><strong>General Inquiries</strong><br>
-                            <a href="mailto:info@campingproductssales.com" class="text-primary">info@campingproductssales.com</a></p>
+                            <a href="mailto:info@campingproductssales.com" class="text-forest">info@campingproductssales.com</a></p>
                             <p class="mb-2"><strong>Customer Support</strong><br>
-                            <a href="mailto:support@campingproductssales.com" class="text-primary">support@campingproductssales.com</a></p>
+                            <a href="mailto:support@campingproductssales.com" class="text-forest">support@campingproductssales.com</a></p>
                             <p class="mb-0"><strong>Partnerships</strong><br>
-                            <a href="mailto:partners@campingproductssales.com" class="text-primary">partners@campingproductssales.com</a></p>
+                            <a href="mailto:partners@campingproductssales.com" class="text-forest">partners@campingproductssales.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                     <div class="accordion" id="faqAccordion">
                         <div class="accordion-item glass-card mb-3">
                             <h2 class="accordion-header">
-                                <button class="accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1">
+                                <button class="bg-transparent text-forest accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1">
                                     What is your return policy?
                                 </button>
                             </h2>
@@ -189,7 +189,7 @@
                         </div>
                         <div class="accordion-item glass-card mb-3">
                             <h2 class="accordion-header">
-                                <button class="accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
+                                <button class="bg-transparent text-forest accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
                                     Do you offer gear testing services?
                                 </button>
                             </h2>
@@ -201,7 +201,7 @@
                         </div>
                         <div class="accordion-item glass-card mb-3">
                             <h2 class="accordion-header">
-                                <button class="accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3">
+                                <button class="bg-transparent text-forest accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3">
                                     What are your shipping options?
                                 </button>
                             </h2>
@@ -213,7 +213,7 @@
                         </div>
                         <div class="accordion-item glass-card mb-3">
                             <h2 class="accordion-header">
-                                <button class="accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4">
+                                <button class="bg-transparent text-forest accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4">
                                     Do you price match?
                                 </button>
                             </h2>
@@ -225,7 +225,7 @@
                         </div>
                         <div class="accordion-item glass-card mb-3">
                             <h2 class="accordion-header">
-                                <button class="accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5">
+                                <button class="bg-transparent text-forest accordion-button glass-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5">
                                     Can I visit your physical stores?
                                 </button>
                             </h2>
@@ -348,7 +348,7 @@
             </div>
             <hr class="my-4 border-white-25">
             <div class="text-center">
-                <p class="text-white-75 mb-0">&copy; 2024 Camping Products Sales. All rights reserved.</p>
+                <p class="text-white-75 mb-0">&copy; 2025 Camping Products Sales. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -390,7 +390,7 @@
                     
                     // Highlight active button
                     if (!this.classList.contains('collapsed')) {
-                        this.classList.add('btn-primary');
+                        this.classList.add('btn-primary text-forest');
                         this.classList.remove('glass-btn');
                     }
                 });
