--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="glass-panel p-4 text-center">
-                        <img src="/placeholder.svg?height=400&width=500" 
-                             alt="Camping Scene" class="img-fluid rounded-4">
+                    <div class="glass-panel text-center">
+                        <img src="images/Hero.jpg" 
+                             alt="Camping Scene" class="img-fluid rounded-4" style="max-height:37rem; width: 100%; opacity: 0.8;">
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 <div class="col-md-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="category-icon mb-3">
-                            <i class="fas fa-campground fa-3x text-light"></i>
+                            <i class="fas fa-campground fa-3x text-forest"></i>
                         </div>
                         <h4 class="text-white mb-3">Tents & Shelters</h4>
                         <p class="text-white-75 mb-4">Premium tents for all weather conditions and group sizes</p>
@@ -89,7 +89,7 @@
                 <div class="col-md-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="category-icon mb-3">
-                            <i class="fas fa-utensils fa-3x text-light"></i>
+                            <i class="fas fa-utensils fa-3x text-forest"></i>
                         </div>
                         <h4 class="text-white mb-3">Cookware</h4>
                         <p class="text-white-75 mb-4">Lightweight and durable cooking equipment for outdoor meals</p>
@@ -101,7 +101,7 @@
                 <div class="col-md-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="category-icon mb-3">
-                            <i class="fas fa-bed fa-3x text-light"></i>
+                            <i class="fas fa-bed fa-3x text-forest"></i>
                         </div>
                         <h4 class="text-white mb-3">Sleeping Gear</h4>
                         <p class="text-white-75 mb-4">Comfortable sleeping bags and pads for restful nights</p>
@@ -124,7 +124,7 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="/images/AlpineProTent.png" 
                              class="card-img-top" alt="Alpine Pro Tent">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Alpine Pro Tent</h5>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="/images/TrailChefSet.png" 
                              class="card-img-top" alt="Trail Chef Set">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Trail Chef Set</h5>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="/images/SummitSleepingBag.png" 
                              class="card-img-top" alt="Summit Sleeping Bag">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Summit Sleeping Bag</h5>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="/images/ExplorerBackpack.png" 
                              class="card-img-top" alt="Explorer Backpack">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Explorer Backpack</h5>
@@ -266,7 +266,7 @@
             </div>
             <hr class="my-4 border-white-25">
             <div class="text-center">
-                <p class="text-white-75 mb-0">&copy; 2024 Camping Products Sales. All rights reserved.</p>
+                <p class="text-white-75 mb-0">&copy; 2025 Camping Products Sales. All rights reserved.</p>
             </div>
         </div>
     </footer>
