--- a/membership.html
+++ b/membership.html
@@ -56,7 +56,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="benefit-icon mb-3">
-                            <i class="fas fa-percentage fa-3x text-primary"></i>
+                            <i class="fas fa-percentage fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Exclusive Discounts</h5>
                         <p class="text-white-75">Get 15% off all purchases plus early access to sales and special promotions</p>
@@ -65,7 +65,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="benefit-icon mb-3">
-                            <i class="fas fa-shipping-fast fa-3x text-primary"></i>
+                            <i class="fas fa-shipping-fast fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Free Shipping</h5>
                         <p class="text-white-75">Enjoy free shipping on all orders, no minimum purchase required</p>
@@ -74,7 +74,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="benefit-icon mb-3">
-                            <i class="fas fa-star fa-3x text-primary"></i>
+                            <i class="fas fa-star fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Priority Support</h5>
                         <p class="text-white-75">Get priority customer support and expert advice from our outdoor specialists</p>
@@ -83,7 +83,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="benefit-icon mb-3">
-                            <i class="fas fa-gift fa-3x text-primary"></i>
+                            <i class="fas fa-gift fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Birthday Rewards</h5>
                         <p class="text-white-75">Receive special birthday discounts and surprise gifts throughout the year</p>
@@ -92,7 +92,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="benefit-icon mb-3">
-                            <i class="fas fa-calendar-alt fa-3x text-primary"></i>
+                            <i class="fas fa-calendar-alt fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Exclusive Events</h5>
                         <p class="text-white-75">Access to member-only camping trips, workshops, and outdoor events</p>
@@ -101,7 +101,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="benefit-icon mb-3">
-                            <i class="fas fa-book fa-3x text-primary"></i>
+                            <i class="fas fa-book fa-3x text-forest"></i>
                         </div>
                         <h5 class="text-white mb-3">Expert Guides</h5>
                         <p class="text-white-75">Access to exclusive camping guides, tips, and destination recommendations</p>
@@ -120,10 +120,10 @@
                         <!-- Tab Navigation -->
                         <ul class="nav nav-tabs border-0 mb-4 justify-content-center" id="membershipTabs">
                             <li class="nav-item">
-                                <button class="nav-link active glass-btn" data-bs-toggle="tab" data-bs-target="#register">Create Account</button>
+                                <button class="nav-link active glass-btn text-forest" data-bs-toggle="tab" data-bs-target="#register">Create Account</button>
                             </li>
                             <li class="nav-item">
-                                <button class="nav-link glass-btn-outline" data-bs-toggle="tab" data-bs-target="#login">Sign In</button>
+                                <button class="nav-link glass-btn-outline text-forest" data-bs-toggle="tab" data-bs-target="#login">Sign In</button>
                             </li>
                         </ul>
 
@@ -220,7 +220,7 @@
                                             <div class="form-check">
                                                 <input class="form-check-input" type="checkbox" id="terms" required>
                                                 <label class="form-check-label text-white-75" for="terms">
-                                                    I agree to the <a href="#" class="text-primary">Terms of Service</a> and <a href="#" class="text-primary">Privacy Policy</a>
+                                                    I agree to the <a href="#" class="text-forest">Terms of Service</a> and <a href="#" class="text-forest">Privacy Policy</a>
                                                 </label>
                                             </div>
                                         </div>
@@ -255,7 +255,7 @@
                                         <i class="fas fa-sign-in-alt me-2"></i>Sign In
                                     </button>
                                     <div class="text-center">
-                                        <a href="#" class="text-primary">Forgot your password?</a>
+                                        <a href="#" class="text-forest">Forgot your password?</a>
                                     </div>
                                 </form>
                             </div>
@@ -277,28 +277,28 @@
                 <div class="row g-4">
                     <div class="col-lg-3 col-md-6">
                         <div class="glass-card p-4 text-center">
-                            <i class="fas fa-shopping-bag fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-shopping-bag fa-2x text-forest mb-3"></i>
                             <h6 class="text-white mb-2">Order History</h6>
                             <p class="text-white-75 small">Track all your purchases and reorder favorites</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="glass-card p-4 text-center">
-                            <i class="fas fa-heart fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-heart fa-2x text-forest mb-3"></i>
                             <h6 class="text-white mb-2">Wishlist</h6>
                             <p class="text-white-75 small">Save products for later and get notified of sales</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="glass-card p-4 text-center">
-                            <i class="fas fa-map-marked-alt fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-map-marked-alt fa-2x text-forest mb-3"></i>
                             <h6 class="text-white mb-2">Trip Planner</h6>
                             <p class="text-white-75 small">Plan your adventures and get gear recommendations</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="glass-card p-4 text-center">
-                            <i class="fas fa-trophy fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-trophy fa-2x text-forest mb-3"></i>
                             <h6 class="text-white mb-2">Rewards Points</h6>
                             <p class="text-white-75 small">Earn points with every purchase and redeem for discounts</p>
                         </div>
@@ -424,7 +424,7 @@
             </div>
             <hr class="my-4 border-white-25">
             <div class="text-center">
-                <p class="text-white-75 mb-0">&copy; 2024 Camping Products Sales. All rights reserved.</p>
+                <p class="text-white-75 mb-0">&copy; 2025 Camping Products Sales. All rights reserved.</p>
             </div>
         </div>
     </footer>
