--- a/product_detail.html
+++ b/product_detail.html
@@ -85,7 +85,7 @@
                                 <span class="text-white-75">(247 reviews)</span>
                             </div>
                             <div class="price mb-4">
-                                <span class="h2 text-primary fw-bold">$299.99</span>
+                                <span class="h2 text- fw-bold">$299.99</span>
                                 <span class="badge bg-success ms-3">In Stock</span>
                             </div>
                             <p class="lead text-white-75 mb-4">
@@ -107,7 +107,7 @@
                                 <h6 class="text-white mb-3">Quantity:</h6>
                                 <div class="input-group" style="width: 150px;">
                                     <button class="btn btn-outline-light glass-btn-outline" type="button" id="decreaseQty">-</button>
-                                    <input type="number" class="form-control glass-input text-center" value="1" id="quantity">
+                                    <input type="text" class="form-control glass-input text-center p-1" value="1" id="quantity" readonly>
                                     <button class="btn btn-outline-light glass-btn-outline" type="button" id="increaseQty">+</button>
                                 </div>
                             </div>
@@ -146,13 +146,13 @@
             <div class="glass-panel p-4">
                 <ul class="nav nav-tabs border-0 mb-4" id="productTabs">
                     <li class="nav-item">
-                        <button class="nav-link active glass-btn" data-bs-toggle="tab" data-bs-target="#description">Description</button>
+                        <button class="nav-link active glass-btn text-light" data-bs-toggle="tab" data-bs-target="#description">Description</button>
                     </li>
                     <li class="nav-item">
-                        <button class="nav-link glass-btn-outline" data-bs-toggle="tab" data-bs-target="#specifications">Specifications</button>
+                        <button class="nav-link glass-btn-outline text-forest" data-bs-toggle="tab" data-bs-target="#specifications">Specifications</button>
                     </li>
                     <li class="nav-item">
-                        <button class="nav-link glass-btn-outline" data-bs-toggle="tab" data-bs-target="#reviews">Reviews</button>
+                        <button class="nav-link glass-btn-outline text-forest" data-bs-toggle="tab" data-bs-target="#reviews">Reviews</button>
                     </li>
                 </ul>
                 <div class="tab-content">
@@ -177,7 +177,7 @@
                             <h5 class="text-white mb-3">Technical Specifications</h5>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <table class="table table-borderless text-white-75">
+                                    <table class="table table-borderless text-white-75 table-transparent">
                                         <tr><td><strong>Capacity:</strong></td><td>2 Person</td></tr>
                                         <tr><td><strong>Seasons:</strong></td><td>4-Season</td></tr>
                                         <tr><td><strong>Weight:</strong></td><td>4.2 lbs (1.9 kg)</td></tr>
@@ -186,7 +186,7 @@
                                     </table>
                                 </div>
                                 <div class="col-md-6">
-                                    <table class="table table-borderless text-white-75">
+                                    <table class="table table-borderless text-white-75 table-transparent">
                                         <tr><td><strong>Peak Height:</strong></td><td>42" (107 cm)</td></tr>
                                         <tr><td><strong>Waterproof Rating:</strong></td><td>3000mm</td></tr>
                                         <tr><td><strong>Pole Material:</strong></td><td>7001-T6 Aluminum</td></tr>
@@ -210,7 +210,7 @@
                             <div class="glass-card p-4 mb-4">
                                 <div class="row align-items-center">
                                     <div class="col-md-3 text-center">
-                                        <div class="h2 text-primary mb-0">4.8</div>
+                                        <div class="h2 text-forest mb-0">4.8</div>
                                         <div class="rating mb-2">
                                             <i class="fas fa-star text-warning"></i>
                                             <i class="fas fa-star text-warning"></i>
@@ -303,7 +303,7 @@
                         <div class="card-body p-4">
                             <h6 class="card-title text-white">Summit Sleeping Bag</h6>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="h6 text-primary mb-0">$199.99</span>
+                                <span class="h6 text-forest mb-0">$199.99</span>
                                 <a href="#" class="btn btn-sm btn-primary glass-btn">View</a>
                             </div>
                         </div>
@@ -316,7 +316,7 @@
                         <div class="card-body p-4">
                             <h6 class="card-title text-white">Explorer Backpack</h6>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="h6 text-primary mb-0">$149.99</span>
+                                <span class="h6 text-forest mb-0">$149.99</span>
                                 <a href="#" class="btn btn-sm btn-primary glass-btn">View</a>
                             </div>
                         </div>
@@ -329,7 +329,7 @@
                         <div class="card-body p-4">
                             <h6 class="card-title text-white">Portable Camp Stove</h6>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="h6 text-primary mb-0">$45.99</span>
+                                <span class="h6 text-forest mb-0">$45.99</span>
                                 <a href="#" class="btn btn-sm btn-primary glass-btn">View</a>
                             </div>
                         </div>
@@ -342,7 +342,7 @@
                         <div class="card-body p-4">
                             <h6 class="card-title text-white">LED Camping Lantern</h6>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="h6 text-primary mb-0">$37.49</span>
+                                <span class="h6 text-forest mb-0">$37.49</span>
                                 <a href="#" class="btn btn-sm btn-primary glass-btn">View</a>
                             </div>
                         </div>
@@ -398,13 +398,44 @@
                     <h5 class="text-white mb-3">
                         <i class="fas fa-mountain me-2"></i>Camping Products Sales
                     </h5>
-                    <p class="text-white-75">Your trusted partner for outdoor adventures since 1995.</p>
-                </div>
-                <div class="col-lg-8">
-                    <div class="text-center">
-                        <p class="text-white-75 mb-0">&copy; 2024 Camping Products Sales. All rights reserved.</p>
+                    <p class="text-white-75">Your trusted partner for outdoor adventures since 1995. Quality gear for every expedition.</p>
+                    <div class="social-links">
+                        <a href="#" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-twitter fa-lg"></i></a>
+                        <a href="#" class="text-white"><i class="fab fa-youtube fa-lg"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-2 col-md-6">
+                    <h6 class="text-white mb-3">Products</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="products.html?category=tents" class="text-white-75 text-decoration-none">Tents</a></li>
+                        <li><a href="products.html?category=cookware" class="text-white-75 text-decoration-none">Cookware</a></li>
+                        <li><a href="products.html?category=sleeping" class="text-white-75 text-decoration-none">Sleeping Gear</a></li>
+                        <li><a href="products.html?category=backpacks" class="text-white-75 text-decoration-none">Backpacks</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <h6 class="text-white mb-3">Company</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="about.html" class="text-white-75 text-decoration-none">About Us</a></li>
+                        <li><a href="contact.html" class="text-white-75 text-decoration-none">Contact</a></li>
+                        <li><a href="reviews.html" class="text-white-75 text-decoration-none">Reviews</a></li>
+                        <li><a href="membership.html" class="text-white-75 text-decoration-none">Membership</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4">
+                    <h6 class="text-white mb-3">Newsletter</h6>
+                    <p class="text-white-75 mb-3">Stay updated with our latest products and outdoor tips</p>
+                    <div class="input-group">
+                        <input type="email" class="form-control glass-input" placeholder="Enter your email">
+                        <button class="btn btn-primary glass-btn" type="button">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+            <hr class="my-4 border-white-25">
+            <div class="text-center">
+                <p class="text-white-75 mb-0">&copy; 2025 Camping Products Sales. All rights reserved.</p>
             </div>
         </div>
     </footer>
